--- a/index.html
+++ b/index.html
@@ -595,72 +595,73 @@
       </div>
   </section>
 
-<section id="pricing" class="py-32 border-t border-white/5 relative">
-    <div class="max-w-7xl mx-auto px-6 text-center mt-12">
-        <h2 class="text-4xl font-medium text-white mb-6">Unbeatable Value.</h2>
-        <p class="text-slate-400 mb-12">One offer pays for a lifetime. Cancel anytime.</p>
+<section id="pricing" class="py-32 border-t border-white/5 relative overflow-hidden">
+    <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[500px] h-[500px] bg-accent/5 rounded-full blur-[120px] pointer-events-none"></div>
+
+    <div class="max-w-7xl mx-auto px-6 text-center mt-12 relative z-10">
+        <h2 class="text-4xl md:text-5xl font-medium text-white mb-6 tracking-tight">Invest in your career.</h2>
+        <p class="text-slate-400 mb-12 font-light">Join 7,000+ engineers who have unlocked their full potential.</p>
          
-        <div class="inline-flex bg-white/5 p-1 rounded-lg border border-white/10 mb-12">
-           <button id="btnMonthly" class="px-6 py-2 rounded text-xs font-bold text-slate-500 hover:text-white transition" onclick="setCycle('monthly')">Monthly</button>
-           <button id="btnAnnual" class="px-6 py-2 rounded text-xs font-bold bg-white text-black transition" onclick="setCycle('annual')">Yearly</button>
+        <div class="inline-flex bg-white/5 p-1 rounded-full border border-white/10 mb-16">
+           <button id="btnMonthly" class="px-8 py-2.5 rounded-full text-xs font-bold text-slate-500 hover:text-white transition-all" onclick="setCycle('monthly')">Monthly</button>
+           <button id="btnAnnual" class="px-8 py-2.5 rounded-full text-xs font-bold bg-white text-black shadow-lg transition-all" onclick="setCycle('annual')">Yearly (Save 20%)</button>
         </div>
 
-        <div class="flex justify-center mb-12">
-            <div id="mic-limit-notice" class="inline-flex items-center gap-2 px-4 py-2 rounded-full bg-blue-900/20 border border-blue-500/30">
-                <i class="fa-solid fa-microphone-lines text-blue-400"></i>
-                <span class="text-[11px] font-bold text-blue-400 uppercase tracking-tight">Fair Use: 6 Hours Active Mic Access Included Monthly</span>
-            </div>
-        </div>
-
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-6xl mx-auto items-start">
-            <div class="perf-card p-8 text-left flex flex-col h-full border-white/5">
-                <h3 class="text-xs font-bold text-slate-500 uppercase tracking-widest mb-4">Starter</h3>
-                <div class="text-4xl font-bold text-white mb-6">Free</div>
-                <div class="space-y-4 text-xs text-slate-400 mb-8 flex-grow">
-                    <p class="flex gap-3"><i class="fa-solid fa-check text-white"></i> 10 Daily Syntheses</p>
-                    <p class="flex gap-3"><i class="fa-solid fa-check text-white"></i> Basic Code Gen</p>
-                    <p class="flex gap-3 opacity-50"><i class="fa-solid fa-xmark"></i> No Stealth Mode</p>
-                    <p class="flex gap-3 opacity-50"><i class="fa-solid fa-xmark"></i> No Visual Context</p>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-6xl mx-auto items-stretch">
+            <div class="perf-card p-10 text-left flex flex-col border-white/5 bg-white/[0.02]">
+                <h3 class="text-[10px] font-bold text-slate-500 uppercase tracking-[0.2em] mb-4">Foundation</h3>
+                <div class="text-4xl font-bold text-white mb-8">Free</div>
+                <div class="space-y-5 text-xs text-slate-400 mb-10 flex-grow">
+                    <p class="flex items-center gap-3"><i class="fa-solid fa-circle-check text-slate-600"></i> 10 Daily Syntheses</p>
+                    <p class="flex items-center gap-3"><i class="fa-solid fa-circle-check text-slate-600"></i> Standard Latency</p>
+                    <p class="flex items-center gap-3 opacity-30"><i class="fa-solid fa-circle-xmark"></i> Stealth Mode</p>
+                    <p class="flex items-center gap-3 opacity-30"><i class="fa-solid fa-circle-xmark"></i> Visual Analysis</p>
                 </div>
-                <button onclick="openDownloadModal()" class="w-full py-4 rounded-xl border border-white/10 text-slate-300 hover:bg-white/5 text-xs font-bold uppercase transition">Download</button>
+                <button onclick="openDownloadModal()" class="w-full py-4 rounded-xl border border-white/10 text-slate-300 hover:bg-white/5 text-[10px] font-bold uppercase tracking-widest transition-all">Download Trial</button>
             </div>
 
-            <div class="perf-card p-8 text-left flex flex-col h-full border-white/20">
-                <h3 class="text-xs font-bold text-white uppercase tracking-widest mb-4">Pro License</h3>
-                <div class="text-4xl font-bold text-white mb-6" id="pricePro">...</div>
-                <div class="space-y-4 text-xs text-slate-300 mb-8 flex-grow">
-                    <p class="flex gap-3"><i class="fa-solid fa-check text-white"></i> Unlimited Syntheses</p>
-                    <p class="flex gap-3 text-blue-400 font-bold"><i class="fa-solid fa-clock"></i> 6 Hours Mic Access / mo</p>
-                    <p class="flex gap-3"><i class="fa-solid fa-check text-white"></i> Visual Context Analysis</p>
-                    <p class="flex gap-3"><i class="fa-solid fa-check text-white"></i> Audio Ingestion</p>
-                    <p class="flex gap-3 text-red-400"><i class="fa-solid fa-video"></i> Visible on Screenshare</p>
+            <div class="perf-card p-10 text-left flex flex-col border-white/20 bg-white/[0.03] scale-105 shadow-2xl z-20">
+                <div class="absolute -top-4 left-1/2 -translate-x-1/2 bg-white text-black text-[9px] font-black px-4 py-1 rounded-full uppercase tracking-tighter shadow-xl">Most Popular</div>
+                <h3 class="text-[10px] font-bold text-white uppercase tracking-[0.2em] mb-4">Pro Professional</h3>
+                <div class="text-4xl font-bold text-white mb-8" id="pricePro">...</div>
+                <div class="space-y-5 text-xs text-slate-300 mb-10 flex-grow">
+                    <p class="flex items-center gap-3 font-medium text-white"><i class="fa-solid fa-microphone-lines text-accent"></i> 6 Hours Mic Access / mo</p>
+                    <p class="flex items-center gap-3"><i class="fa-solid fa-circle-check text-accent/50"></i> Unlimited Syntheses</p>
+                    <p class="flex items-center gap-3"><i class="fa-solid fa-circle-check text-accent/50"></i> Visual Context Engine</p>
+                    <p class="flex items-center gap-3 text-red-400/80"><i class="fa-solid fa-eye"></i> Visible on Screen</p>
                 </div>
-                <button id="btnPro" disabled onclick="initiatePayment('pro')" class="w-full py-4 rounded-xl bg-white text-black hover:bg-slate-200 text-xs font-bold uppercase transition disabled:opacity-50 disabled:cursor-not-allowed">Upgrade</button>
+                <button id="btnPro" disabled onclick="initiatePayment('pro')" class="w-full py-4 rounded-xl bg-white text-black hover:bg-slate-200 text-[10px] font-bold uppercase tracking-widest transition-all">Upgrade Now</button>
             </div>
 
-            <div class="perf-card pricing-elite p-8 text-left flex flex-col h-full bg-[#050505] shadow-accent">
-                <div class="absolute top-0 right-0 p-4"><i class="fa-solid fa-crown text-accent text-xl"></i></div>
-                <h3 class="text-xs font-bold text-accent uppercase tracking-widest mb-4">Elite License</h3>
-                <div class="text-4xl font-bold text-white mb-6" id="priceStealth">...</div>
-                <div class="space-y-4 text-xs text-white mb-8 flex-grow">
-                    <p class="flex gap-3 text-accent font-bold"><i class="fa-solid fa-clock"></i> 6 Hours Mic Access / mo</p>
-                    <p class="flex gap-3"><i class="fa-solid fa-shield-halved text-accent"></i> 100% Undetectable</p>
-                    <p class="flex gap-3"><i class="fa-solid fa-ghost text-accent"></i> Invisible to Screenshare</p>
-                    <p class="flex gap-3"><i class="fa-solid fa-keyboard text-accent"></i> Direct Input Mode</p>
-                    <p class="flex gap-3"><i class="fa-solid fa-user-secret text-accent"></i> Ghost Dock (No Icon)</p>
+            <div class="perf-card pricing-elite p-10 text-left flex flex-col border-accent/20 bg-[#050505] relative overflow-hidden">
+                <div class="absolute top-0 right-0 p-6 opacity-20"><i class="fa-solid fa-ghost text-4xl text-accent"></i></div>
+                <h3 class="text-[10px] font-bold text-accent uppercase tracking-[0.2em] mb-4">Elite Stealth</h3>
+                <div class="text-4xl font-bold text-white mb-8" id="priceStealth">...</div>
+                <div class="space-y-5 text-xs text-slate-200 mb-10 flex-grow">
+                    <p class="flex items-center gap-3 font-medium text-accent"><i class="fa-solid fa-bolt-lightning"></i> 6 Hours Mic Access / mo</p>
+                    <p class="flex items-center gap-3 font-semibold"><i class="fa-solid fa-shield-halved text-accent"></i> 100% Undetectable</p>
+                    <p class="flex items-center gap-3"><i class="fa-solid fa-ghost text-accent/50"></i> Invisible to Zoom/Teams</p>
+                    <p class="flex items-center gap-3"><i class="fa-solid fa-user-secret text-accent/50"></i> Hidden Native Process</p>
                 </div>
-                <button id="btnElite" disabled onclick="initiatePayment('pro_plus')" class="w-full py-4 rounded-xl bg-accent text-black hover:brightness-110 text-xs font-bold uppercase transition shadow-lg disabled:opacity-50 disabled:cursor-not-allowed">Get Elite</button>
+                <button id="btnElite" disabled onclick="initiatePayment('pro_plus')" class="w-full py-4 rounded-xl bg-accent text-black hover:brightness-110 text-[10px] font-bold uppercase tracking-widest transition-all shadow-[0_0_30px_rgba(0,242,255,0.2)]">Go Elite</button>
             </div>
         </div>
 
-        <div class="max-w-2xl mx-auto mt-12 p-4 rounded-xl bg-white/5 border border-white/10">
-            <p class="text-[10px] text-slate-500 font-mono uppercase tracking-widest mb-2">Technical Note: Smart Mic Timer</p>
-            <p class="text-xs text-slate-400 leading-relaxed">
-                The 6-hour limit applies only to <strong>active microphone usage</strong>. The in-app timer only counts down when the Mic is toggled <span class="text-green-400 font-bold">ON</span>. If the Mic is turned off, no time is deducted from your monthly balance.
-            </p>
+        <div class="max-w-3xl mx-auto mt-20 p-8 rounded-3xl bg-white/[0.02] border border-white/5 backdrop-blur-xl group hover:border-accent/20 transition-all duration-500">
+            <div class="flex flex-col md:flex-row items-center gap-8 text-left">
+                <div class="w-16 h-16 rounded-2xl bg-accent/10 border border-accent/20 flex items-center justify-center text-accent shrink-0 group-hover:scale-110 transition-transform">
+                    <i class="fa-solid fa-stopwatch text-2xl"></i>
+                </div>
+                <div>
+                    <h4 class="text-sm font-bold text-white mb-2 uppercase tracking-wide">Intelligent Audio Credit System</h4>
+                    <p class="text-xs text-slate-400 leading-relaxed">
+                        Paid plans include a generous <span class="text-white font-semibold">6-hour monthly allowance</span> for active audio capture. To ensure maximum value, the integrated **Ghost Timer** only engages when your microphone is toggled <span class="text-accent font-bold">ON</span>. Idle time and passive preparation are never deducted from your balance.
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
-  </section>
+</section>
 
   <section class="py-24 border-t border-white/5 bg-[#050505]">
       <div class="max-w-7xl mx-auto px-6">
