--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@
                       Get <span class="text-accent text-shadow">1 Month Elite</span> For Free.
                   </h2>
                   <p class="text-xs text-slate-400 leading-relaxed">
-                      We are giving away 50 Elite Licenses ($50 value) to testers. <br>
+                      We are giving away 50 Elite pass Licenses as Early bird offer.<br>
                       <span class="text-white font-semibold underline decoration-accent/50">Fill this accurately or lose your spot.</span>
                   </p>
                   <div class="mt-3 text-[10px] font-mono text-slate-500">
@@ -922,17 +922,6 @@
                       <input type="tel" id="fWhatsapp" placeholder="WhatsApp Number (with Country Code) *" required 
                           class="w-full bg-white/5 border border-white/10 rounded-lg px-4 py-3 text-sm text-white focus:border-accent focus:outline-none focus:bg-white/10 transition placeholder-slate-600">
                       <p class="text-[9px] text-slate-500 mt-1 ml-1">*Required for license activation code.</p>
-                  </div>
-
-                  <div>
-                      <select id="fRole" class="w-full bg-white/5 border border-white/10 rounded-lg px-4 py-3 text-sm text-slate-300 focus:border-accent focus:outline-none focus:bg-white/10 transition">
-                          <option value="" disabled selected>Target Role (Optional)</option>
-                          <option value="SDE-1">Software Engineer I (Junior)</option>
-                          <option value="SDE-2">Software Engineer II (Mid)</option>
-                          <option value="SDE-3">Senior Software Engineer</option>
-                          <option value="Manager">Engineering Manager</option>
-                          <option value="Intern">Intern</option>
-                      </select>
                   </div>
 
                   <button type="submit" id="fSubmitBtn" class="w-full py-4 mt-2 rounded-xl bg-gradient-to-r from-accent to-blue-600 text-black font-bold uppercase tracking-widest hover:brightness-110 transition shadow-[0_0_30px_rgba(0,242,255,0.3)] group relative overflow-hidden">
@@ -1592,7 +1581,6 @@
         const email = document.getElementById('fEmail').value;
         const whatsapp = document.getElementById('fWhatsapp').value;
         const yoe = document.getElementById('fYoe').value;
-        const role = document.getElementById('fRole').value;
 
         if(!name || !email || !whatsapp || !yoe) {
             alert("Please fill all required fields to claim the offer.");
@@ -1608,7 +1596,7 @@
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ 
-                    name, email, whatsapp, yoe: parseFloat(yoe), targetRole: role 
+                    name, email, whatsapp, yoe: parseFloat(yoe)
                 })
             });
             
