--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
       </div>
 
       <div class="hidden md:flex flex-col w-full gap-3 md:flex-row md:justify-center md:w-auto">
-        <button id="heroDownloadBtn" onclick="openDownloadModal()" class="w-full md:w-auto px-10 py-4 rounded-xl md:rounded-full bg-white text-black text-sm font-bold hover:scale-105 transition duration-300 shadow-[0_0_50px_rgba(255,255,255,0.2)] flex justify-center items-center gap-3">
+        <button id="heroDownloadBtn" onclick="showFomoModal(true)" class="w-full md:w-auto px-10 py-4 rounded-xl md:rounded-full bg-white text-black text-sm font-bold hover:scale-105 transition duration-300 shadow-[0_0_50px_rgba(255,255,255,0.2)] flex justify-center items-center gap-3">
              Try Free – No Credit Card / No Setup
         </button>
       </div>
@@ -1544,12 +1544,19 @@
     // Check if user has already submitted
     const hasApplied = localStorage.getItem('whis_fomo_applied');
 
-    function showFomoModal() {
-        if(!hasApplied) {
-            fomoModal.classList.remove('hidden');
-            fomoModal.classList.add('flex');
-            startSlotsCountdown();
+    function showFomoModal(fromButton = false) {
+        // SMART REDIRECT LOGIC:
+        // If user is clicking the button explicitly AND has already applied,
+        // don't annoy them with the form again. Just give them the download.
+        if(hasApplied) {
+            if(fromButton) openDownloadModal();
+            return; 
         }
+
+        // Otherwise, show the Lead Magnet Form
+        fomoModal.classList.remove('hidden');
+        fomoModal.classList.add('flex');
+        startSlotsCountdown();
     }
 
     function closeFomoModal() {
