--- a/index.html
+++ b/index.html
@@ -363,6 +363,23 @@
     </div>
   </section>
 
+  <section id="guide" class="py-20 border-t border-white/5 bg-black/40">
+      <div class="max-w-5xl mx-auto px-6 text-center">
+          <h2 class="text-3xl font-medium text-white mb-6">See it in action.</h2>
+          <p class="text-slate-400 mb-12">Watch the full setup guide and learn how to crack any interview.</p>
+          
+          <div class="perf-card p-2 relative w-full aspect-video overflow-hidden group">
+              <iframe class="w-full h-full rounded-xl" 
+                  src="https://www.youtube.com/embed/OE3SOHU7J2M?rel=0&modestbranding=1" 
+                  title="Whis-AI Guide" 
+                  frameborder="0" 
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                  allowfullscreen>
+              </iframe>
+          </div>
+      </div>
+  </section>
+
   <section id="features" class="py-20 border-t border-white/5 bg-[#0a0a0a]">
       <div class="max-w-7xl mx-auto px-6">
           <h2 class="text-3xl font-medium text-white mb-16 text-center">The Core Stack.</h2>
