--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
           
           <div class="perf-card p-2 relative w-full aspect-video overflow-hidden group">
               <iframe class="w-full h-full rounded-xl" 
-                  src="https://www.youtube.com/watch?v=riJZniRiyKA?rel=0&modestbranding=1" 
+                  src="https://www.youtube.com/embed/riJZniRiyKA?rel=0&modestbranding=1"
                   title="Whis-AI Guide" 
                   frameborder="0" 
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
