--- a/index.html
+++ b/index.html
@@ -910,7 +910,7 @@
                       CLOSING TONIGHT
                   </div>
                   <h2 class="text-2xl md:text-3xl font-bold text-white mb-2 tracking-tight">
-                      Get <span class="text-accent text-shadow">1 Month Elite</span> For Free.
+                      Get <span class="text-accent text-shadow">1 Week Elite</span> For Free.
                   </h2>
                   <p class="text-xs text-slate-400 leading-relaxed">
                       We are giving away 50 Elite pass Licenses as Early bird offer.<br>
