--- a/index.html
+++ b/index.html
@@ -85,6 +85,17 @@
         transform: translateZ(0); /* Force GPU Hardware Acceleration */
     }
 
+
+    /* This makes the tiny hourglass icon rotate smoothly */
+@keyframes spin-slow {
+    from { transform: rotate(0deg); }
+    to { transform: rotate(360deg); }
+}
+.animate-spin-slow {
+    animation: spin-slow 8s linear infinite;
+}
+
+    
     .perf-card:hover {
         transform: translateY(-2px);
         border-color: rgba(255, 255, 255, 0.2);
