--- a/index.html
+++ b/index.html
@@ -951,6 +951,32 @@
                   </div>
               </div>
 
+
+
+            <div class="mb-6 p-4 rounded-xl bg-accent/10 border border-accent/20">
+    <div class="flex items-center justify-between mb-3">
+        <div class="flex items-center gap-2">
+            <i class="fa-solid fa-hourglass-start text-accent animate-spin-slow"></i>
+            <span class="text-[10px] text-slate-300 uppercase font-bold tracking-widest">Reserved for:</span>
+        </div>
+        <div id="modal-timer" class="text-accent font-mono font-bold text-lg">05:00</div>
+    </div>
+    
+    <div class="space-y-2">
+        <div class="flex justify-between text-[9px] font-mono">
+            <span class="text-slate-500">REDEMPTION PROGRESS</span>
+            <span class="text-accent" id="slots-percent">92% FULL</span>
+        </div>
+        <div class="w-full h-1.5 bg-white/5 rounded-full overflow-hidden border border-white/10">
+            <div id="scarcity-bar" class="h-full bg-gradient-to-r from-blue-600 to-accent transition-all duration-1000" style="width: 92%"></div>
+        </div>
+        <div class="text-[9px] font-mono text-center text-red-400 animate-pulse mt-1">
+            <i class="fa-solid fa-fire mr-1"></i> <span id="slots-left-v2">4</span> SLOTS REMAINING
+        </div>
+    </div>
+</div>
+
+            
               <form id="fomoForm" onsubmit="submitFomoForm(event)" class="space-y-4">
                   <div>
                       <input type="text" id="fName" placeholder="Full Name *" required 
