Update promotional text and success message

--- a/index.html
+++ b/index.html
@@ -993,7 +993,7 @@
                       CLOSING TONIGHT
                   </div>
                   <h2 class="text-2xl md:text-3xl font-bold text-white mb-2 tracking-tight">
-                      Get <span class="text-accent text-shadow">1 Week Elite</span> For Free.
+                      Get <span class="text-accent text-shadow">24 hours Elite</span> For Free.
                   </h2>
                   <p class="text-xs text-slate-400 leading-relaxed">
                       We are giving away 50 Elite pass Licenses as Early bird offer.<br>
@@ -1064,7 +1064,7 @@
   <div id="fomoSuccess" class="fixed top-10 left-1/2 -translate-x-1/2 z-[400] hidden flex-col items-center animate-bounce">
       <div class="perf-card px-8 py-4 bg-green-500/10 border border-green-500/50 text-green-400 font-bold flex items-center gap-3 backdrop-blur-md">
           <i class="fa-solid fa-circle-check text-xl"></i>
-          <span>Application Received! Check your WhatsApp soon.</span>
+          <span>Application Received! Your Elite access will be activated in next 1-2 hours, If not please reach us out via whatsapp</span>
       </div>
   </div>
 
