--- a/index.html
+++ b/index.html
@@ -997,7 +997,7 @@
                   </h2>
                   <p class="text-xs text-slate-400 leading-relaxed">
                       We are giving away 50 Elite pass Licenses as Early bird offer.<br>
-                      <span class="text-white font-semibold underline decoration-accent/50">Fill this accurately to claim your spot.</span>
+                      <span class="text-white font-semibold underline decoration-accent/50">Fill this accurately to claim your spot, also signin atleast once with google mail here to get the access</span>
                   </p>
                   <div class="mt-3 text-[10px] font-mono text-slate-500">
                       <i class="fa-solid fa-users text-accent mr-1"></i> <span id="slots-left" class="text-white font-bold">14</span> slots remaining
