Disable fomoModal and its display timeout
Comment out fomoModal div and related timeout.

--- a/index.html
+++ b/index.html
@@ -969,7 +969,7 @@
     </div>
   </div>
 
-  <div id="fomoModal" class="fixed inset-0 z-[300] hidden items-center justify-center p-4 bg-black/90 backdrop-blur-xl transition-opacity duration-500">
+ <!-- <div id="fomoModal" class="fixed inset-0 z-[300] hidden items-center justify-center p-4 bg-black/90 backdrop-blur-xl transition-opacity duration-500">
       <div class="perf-card relative max-w-md w-full overflow-hidden border border-accent/40 shadow-[0_0_100px_rgba(0,242,255,0.2)] animate-float">
           
           <div class="absolute top-[-50%] left-[-50%] w-[200%] h-[200%] bg-[radial-gradient(circle,var(--accent-glow)_0%,transparent_60%)] opacity-20 pointer-events-none animate-pulse-slow"></div>
@@ -1058,7 +1058,7 @@
           <i class="fa-solid fa-circle-check text-xl"></i>
           <span>Application Received! Your Elite access will be activated in next 1-2 hours, If not please reach us out via whatsapp</span>
       </div>
-  </div>
+  </div>-->
 
   <script>
     // --- 1. OPTIMIZED CAROUSEL LOGIC ---
@@ -1731,7 +1731,7 @@
         fetchPricingConfig();
         updateDynamicSignups();
         startIstMidnightTimer();
-        setTimeout(showFomoModal, 5000);
+        //setTimeout(showFomoModal, 5000);
     });
   </script>
 </body>
