Add floating animation to mobile lead capture

--- a/index.html
+++ b/index.html
@@ -113,6 +113,15 @@
         padding-bottom: 80px; 
     }
 
+    @keyframes float { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-10px); } }
+.animate-float { animation: float 6s ease-in-out infinite; }
+
+#mobileLeadCapture {
+    box-shadow: 0 20px 50px rgba(0,242,255,0.2);
+    transition: all 0.3s ease;
+}
+
+    
     /* CSS-Only Color Cycle (High Performance replacement for JS animation) */
     @keyframes hueCycle {
         0% { filter: hue-rotate(0deg); }
@@ -226,6 +235,19 @@
   </style>
 </head>
 <body class="no-scrollbar">
+
+  <div id="mobileLeadCapture" class="fixed bottom-[100px] md:bottom-8 md:right-20 left-4 right-4 z-[55] flex flex-col md:flex-row items-center gap-3 bg-black/90 backdrop-blur-3xl border border-cyan-400/20 p-4 rounded-2xl md:max-w-sm animate-float">
+    <div class="flex items-center gap-3">
+        <div class="w-10 h-10 rounded-full bg-cyan-400/20 flex items-center justify-center text-cyan-400 animate-pulse"><i class="fa-solid fa-gift"></i></div>
+        <p class="text-[11px] text-white font-medium leading-tight">Unlock a <span class="text-cyan-400 font-bold">Special Discount Code</span> via WhatsApp</p>
+    </div>
+    <div class="flex w-full gap-2 mt-2 md:mt-0">
+        <input type="tel" id="leadWhatsapp" placeholder="WhatsApp Number" class="flex-1 bg-white/5 border border-white/10 rounded-lg px-3 py-2 text-xs text-white focus:border-cyan-400 outline-none">
+        <button onclick="submitLeadNumber()" id="leadBtn" class="bg-cyan-400 text-black text-[10px] font-bold px-4 py-2 rounded-lg whitespace-nowrap hover:scale-105 transition">GET CODE</button>
+    </div>
+    <button onclick="this.parentElement.remove()" class="absolute -top-2 -right-2 w-6 h-6 bg-black border border-white/20 rounded-full text-[10px] flex items-center justify-center text-slate-400 hover:text-white">✕</button>
+</div>
+
 
   <div class="fixed top-0 left-0 right-0 h-[40px] bg-gradient-to-r from-red-600 to-orange-600 flex justify-center items-center gap-4 shadow-[0_0_20px_rgba(220,38,38,0.5)] z-[60]">
       <span class="text-white font-bold text-xs md:text-sm uppercase tracking-widest animate-pulse"><i class="fa-solid fa-bolt mr-2"></i>Flash Sale Ends Tonight</span>
