Add scholarship discount information section

--- a/index.html
+++ b/index.html
@@ -756,6 +756,16 @@
             </div>
         </div>
     </div>
+
+  <div class="mt-12 p-6 rounded-2xl border border-dashed border-white/10 bg-white/5 max-w-2xl mx-auto text-center">
+    <p class="text-sm text-slate-400">
+        <i class="fa-solid fa-graduation-cap text-cyan-400 mr-2"></i> 
+        Struggling with budget or currently unemployed? 
+        <a href="https://wa.me/8669110499?text=Hi, I am struggling with budget. Can I get a discount?" target="_blank" class="text-cyan-400 font-bold hover:underline ml-1">
+            Talk to our team for a scholarship discount.
+        </a>
+    </p>
+</div>
 </section>
 
   <section class="py-24 border-t border-white/5 bg-[#050505]">
