Add WhatsApp chat link in payment modal
Added a chat link for instant help in the payment modal.

--- a/index.html
+++ b/index.html
@@ -929,6 +929,14 @@
 
 <div id="paymentModal" class="fixed inset-0 z-[150] hidden items-center justify-center p-4 bg-black/95 backdrop-blur-xl">
     <div class="perf-card p-10 max-w-md w-full text-center border border-white/10 relative shadow-[0_0_50px_rgba(0,0,0,1)]">
+
+        <div class="mt-8 pt-6 border-t border-white/5">
+    <p class="text-[11px] text-slate-500 mb-4 italic">"I'm not sure if this is right for me yet..."</p>
+    <a href="https://wa.me/8669110499?text=Hi, I am on the payment page but have questions." target="_blank" class="flex items-center justify-center gap-3 w-full py-3 rounded-xl border border-[#25D366]/30 text-[#25D366] text-xs font-bold hover:bg-[#25D366]/10 transition">
+        <i class="fa-brands fa-whatsapp"></i> Chat for Instant Help & Best Offer
+    </a>
+</div>
+      
         <button onclick="closePaymentModal()" class="absolute top-5 right-5 text-slate-500 hover:text-white transition">
             <i class="fa-solid fa-times text-lg"></i>
         </button>
