Add section comparing Whis-AI with traditional methods

--- a/index.html
+++ b/index.html
@@ -695,6 +695,37 @@
   </section>
 
 
+
+  <section class="py-20 bg-[#050505]">
+    <div class="max-w-4xl mx-auto px-6">
+        <h2 class="text-3xl font-bold text-center mb-12">Why candidates are choosing Whis-AI over "Free" AI</h2>
+        <div class="grid md:grid-cols-2 gap-0 border border-white/10 rounded-3xl overflow-hidden">
+            <div class="p-8 bg-white/[0.02] border-r border-white/10">
+                <p class="text-red-500 font-bold uppercase text-[10px] tracking-widest mb-4">The Old Way</p>
+                <ul class="space-y-4 text-sm text-slate-500">
+                    <li class="flex gap-3"><i class="fa-solid fa-xmark mt-1"></i> Switching tabs (Easy to catch)</li>
+                    <li class="flex gap-3"><i class="fa-solid fa-xmark mt-1"></i> Laggy ChatGPT responses</li>
+                    <li class="flex gap-3"><i class="fa-solid fa-xmark mt-1"></i> Interviewer sees your eyes moving</li>
+                    <li class="flex gap-3 font-bold text-slate-400 italic">Result: Rejection & Blacklisted</li>
+                </ul>
+            </div>
+            <div class="p-8 bg-cyan-400/5 relative">
+                <div class="absolute top-4 right-4 text-cyan-400 animate-pulse text-xs font-bold">Recommended</div>
+                <p class="text-cyan-400 font-bold uppercase text-[10px] tracking-widest mb-4">The Whis-AI Way</p>
+                <ul class="space-y-4 text-sm text-slate-200">
+                    <li class="flex gap-3"><i class="fa-solid fa-check text-cyan-400 mt-1"></i> 100% Invisible Overlay</li>
+                    <li class="flex gap-3"><i class="fa-solid fa-check text-cyan-400 mt-1"></i> Real-time Mic Audio capture</li>
+                    <li class="flex gap-3"><i class="fa-solid fa-check text-cyan-400 mt-1"></i> Responses built for Senior Roles</li>
+                    <li class="flex gap-3 font-bold text-cyan-400">Result: $100k+ Job Offer secured</li>
+                </ul>
+            </div>
+        </div>
+        <p class="text-center text-slate-500 text-[11px] mt-8 italic">
+            "The cost of one failed interview is a year of lost salary. Whis-AI costs less than a dinner for two."
+        </p>
+    </div>
+</section>
+
 <section id="pricing" class="py-32 border-t border-white/5 relative overflow-hidden">
     <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[500px] h-[500px] bg-accent/5 rounded-full blur-[120px] pointer-events-none"></div>
 
