Update checkout section with additional information

--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@
          
         <div class="mb-8">
             <h3 class="text-2xl font-bold text-white mb-2 tracking-tight">Secure Checkout</h3>
-            <p class="text-xs text-slate-500 uppercase tracking-widest font-mono">Select your preferred gateway</p>
+            <p class="text-xs text-slate-500 uppercase tracking-widest font-mono italic">Select your preferred gateway</p>
         </div>
 
         <div class="space-y-4">
@@ -996,9 +996,33 @@
 
             <div id="paypal-button-container" class="w-full overflow-hidden rounded-2xl"></div>
         </div>
+
+        <div class="mt-8 pt-6 border-t border-white/5">
+            <div class="grid grid-cols-2 gap-4 mb-6">
+                <div class="text-left">
+                    <div class="flex items-center gap-2 text-green-400 text-[10px] font-bold uppercase tracking-wider mb-1">
+                        <i class="fa-solid fa-circle-check"></i> 100% Success
+                    </div>
+                    <p class="text-[9px] text-slate-500 leading-tight">Verified by 7,000+ job seekers this month.</p>
+                </div>
+                <div class="text-left border-l border-white/10 pl-4">
+                    <div class="flex items-center gap-2 text-cyan-400 text-[10px] font-bold uppercase tracking-wider mb-1">
+                        <i class="fa-solid fa-ghost"></i> Invisible
+                    </div>
+                    <p class="text-[9px] text-slate-500 leading-tight">Guaranteed undetectable on Zoom, Meet & Teams.</p>
+                </div>
+            </div>
+
+            <a href="https://wa.me/8669110499?text=Hi!%20I'm%20at%20the%20checkout%20and%20need%20a%20special%20discount%20or%20help%20with%20payment." 
+               target="_blank" 
+               class="flex items-center justify-center gap-2 w-full py-3 rounded-xl bg-[#25D366]/10 text-[#25D366] text-[10px] font-bold hover:bg-[#25D366]/20 transition-all border border-[#25D366]/10">
+                <i class="fa-brands fa-whatsapp text-sm"></i>
+                Having trouble? Chat with us for a discount.
+            </a>
+        </div>
         
-        <p class="mt-8 text-[10px] text-slate-600 flex items-center justify-center gap-2">
-            <i class="fa-solid fa-lock"></i> 256-bit Encrypted Transaction
+        <p class="mt-6 text-[10px] text-slate-600 flex items-center justify-center gap-2">
+            <i class="fa-solid fa-lock"></i> 256-bit Encrypted Transaction • No Data Logged
         </p>
     </div>
 </div>
