--- a/index.html
+++ b/index.html
@@ -1553,26 +1553,45 @@ async function fetchPricingConfig() {
         updatePricingUI();
     }
 
-    function updatePricingUI() {
-        if (!PRICING_CONFIG) return;
-        const proDiv = document.getElementById('pricePro');
-        const eliteDiv = document.getElementById('priceStealth');
-        let proPrice = 0.00, elitePrice = 0.00;
-        let proDisc = PRICING_CONFIG.pro.discount;
-        let eliteDisc = PRICING_CONFIG.pro_plus.discount;
+function updatePricingUI() {
+    const grid = document.getElementById('pricing-grid');
+    if(!grid) return;
+    grid.innerHTML = '';
 
-        if (currentCycle === 'monthly') {
-            proPrice = PRICING_CONFIG.pro.monthly;
-            elitePrice = PRICING_CONFIG.pro_plus.monthly;
-            proDiv.innerHTML = `${formatPrice(proPrice, proDisc)}<span class="text-[10px] text-slate-500 block font-normal mt-1">/month</span>`;
-            eliteDiv.innerHTML = `${formatPrice(elitePrice, eliteDisc)}<span class="text-[10px] text-slate-500 block font-normal mt-1">/month</span>`;
-        } else {
-            proPrice = PRICING_CONFIG.pro.annual_per_month;
-            elitePrice = PRICING_CONFIG.pro_plus.annual_per_month;
-            proDiv.innerHTML = `${formatPrice(proPrice, proDisc)}<span class="text-[10px] text-slate-500 block font-normal mt-1">/month (billed yearly)</span>`;
-            eliteDiv.innerHTML = `${formatPrice(elitePrice, eliteDisc)}<span class="text-[10px] text-slate-500 block font-normal mt-1">/month (billed yearly)</span>`;
-        }
-    }
+    const userTimeZone = Intl.DateTimeFormat().resolvedOptions().timeZone;
+    const isIndia = userTimeZone === 'Asia/Kolkata' || userTimeZone === 'Asia/Calcutta';
+    const symbol = isIndia ? '₹' : '$';
+
+    PRICING_CONFIG.forEach(tier => {
+        const card = document.createElement('div');
+        card.className = `perf-card p-8 flex flex-col relative ${tier.is_popular ? 'pricing-elite border-accent/50' : ''}`;
+        
+        // We calculate a random starting minute between 4 and 7 for the FOMO effect
+        const randomMin = Math.floor(Math.random() * 3) + 4; 
+
+        card.innerHTML = `
+            ${tier.is_popular ? '<div class="absolute top-0 right-10 transform -translate-y-1/2 bg-accent text-black px-4 py-1 rounded-full text-[10px] font-black uppercase tracking-widest shadow-[0_0_20px_var(--accent-glow)]">Most Popular</div>' : ''}
+            <h3 class="text-xl font-bold mb-1">${tier.name}</h3>
+            <div class="flex items-baseline gap-1 mb-4">
+                <span class="text-4xl font-black tracking-tighter">${symbol}${tier.price}</span>
+                <span class="text-slate-500 text-xs">/ ${tier.duration}</span>
+            </div>
+
+            <div class="mb-6 flex items-center justify-center gap-2 text-[10px] text-orange-500 font-bold uppercase bg-orange-500/10 py-2.5 px-3 rounded-xl border border-orange-500/20">
+                <i class="fa-solid fa-clock-rotate-left animate-pulse"></i> 
+                Offer expires in: <span class="font-mono pricing-countdown" data-minutes="${randomMin}">0${randomMin}:42</span>
+            </div>
+
+            <ul class="text-left space-y-3 mb-8 flex-1">
+                ${tier.features.map(f => `<li class="flex items-center gap-3 text-xs text-slate-300"><i class="fa-solid fa-check text-accent text-[10px]"></i> ${f}</li>`).join('')}
+            </ul>
+            <button onclick="handlePlanSelection('${tier.id}')" class="w-full py-4 rounded-xl ${tier.is_popular ? 'bg-accent text-black shadow-[0_10px_30px_rgba(0,242,255,0.3)]' : 'bg-white/5 text-white border border-white/10'} font-bold text-xs uppercase tracking-widest hover:scale-[1.02] active:scale-95 transition-all">
+                Get Started Now
+            </button>
+        `;
+        grid.appendChild(card);
+    });
+}
 
     async function fetchUserStatus() {
         if(!currentUser) return;
