--- a/index.html
+++ b/index.html
@@ -1580,7 +1580,7 @@ async function fetchPricingConfig() {
 function updatePricingUI() {
     const grid = document.getElementById('pricing-grid');
     if(!grid) return;
-    grid.innerHTML = '';
+    grid.innerHTML = ''; // Clear loading state
 
     const userTimeZone = Intl.DateTimeFormat().resolvedOptions().timeZone;
     const isIndia = userTimeZone === 'Asia/Kolkata' || userTimeZone === 'Asia/Calcutta';
@@ -1588,28 +1588,33 @@ function updatePricingUI() {
 
     PRICING_CONFIG.forEach(tier => {
         const card = document.createElement('div');
-        card.className = `perf-card p-8 flex flex-col relative ${tier.is_popular ? 'pricing-elite border-accent/50' : ''}`;
+        // Added styling classes for your glassmorphism look
+        card.className = `perf-card p-8 flex flex-col relative ${tier.is_popular ? 'pricing-elite border-cyan-400/50' : 'border-white/10'}`;
         
-        // We calculate a random starting minute between 4 and 7 for the FOMO effect
-        const randomMin = Math.floor(Math.random() * 3) + 4; 
+        // Random start time for FOMO (between 4 and 8 minutes)
+        const randomMin = Math.floor(Math.random() * 4) + 4; 
 
         card.innerHTML = `
-            ${tier.is_popular ? '<div class="absolute top-0 right-10 transform -translate-y-1/2 bg-accent text-black px-4 py-1 rounded-full text-[10px] font-black uppercase tracking-widest shadow-[0_0_20px_var(--accent-glow)]">Most Popular</div>' : ''}
-            <h3 class="text-xl font-bold mb-1">${tier.name}</h3>
+            ${tier.is_popular ? '<div class="absolute top-0 right-10 transform -translate-y-1/2 bg-cyan-400 text-black px-4 py-1 rounded-full text-[10px] font-black uppercase tracking-widest">Most Popular</div>' : ''}
+            <h3 class="text-xl font-bold mb-1 text-white">${tier.name}</h3>
             <div class="flex items-baseline gap-1 mb-4">
-                <span class="text-4xl font-black tracking-tighter">${symbol}${tier.price}</span>
+                <span class="text-4xl font-black tracking-tighter text-white">${symbol}${tier.price}</span>
                 <span class="text-slate-500 text-xs">/ ${tier.duration}</span>
             </div>
 
             <div class="mb-6 flex items-center justify-center gap-2 text-[10px] text-orange-500 font-bold uppercase bg-orange-500/10 py-2.5 px-3 rounded-xl border border-orange-500/20">
-                <i class="fa-solid fa-clock-rotate-left animate-pulse"></i> 
-                Offer expires in: <span class="font-mono pricing-countdown" data-minutes="${randomMin}">0${randomMin}:42</span>
+                <i class="fa-solid fa-clock animate-pulse"></i> 
+                Deal expires in: <span class="font-mono pricing-countdown">0${randomMin}:42</span>
             </div>
 
             <ul class="text-left space-y-3 mb-8 flex-1">
-                ${tier.features.map(f => `<li class="flex items-center gap-3 text-xs text-slate-300"><i class="fa-solid fa-check text-accent text-[10px]"></i> ${f}</li>`).join('')}
+                ${tier.features.map(f => `
+                    <li class="flex items-center gap-3 text-xs text-slate-300">
+                        <i class="fa-solid fa-check text-cyan-400 text-[10px]"></i> ${f}
+                    </li>`).join('')}
             </ul>
-            <button onclick="handlePlanSelection('${tier.id}')" class="w-full py-4 rounded-xl ${tier.is_popular ? 'bg-accent text-black shadow-[0_10px_30px_rgba(0,242,255,0.3)]' : 'bg-white/5 text-white border border-white/10'} font-bold text-xs uppercase tracking-widest hover:scale-[1.02] active:scale-95 transition-all">
+
+            <button onclick="handlePlanSelection('${tier.id}')" class="w-full py-4 rounded-xl ${tier.is_popular ? 'bg-cyan-400 text-black' : 'bg-white/5 text-white border border-white/10'} font-bold text-xs uppercase tracking-widest hover:scale-[1.02] transition-all">
                 Get Started Now
             </button>
         `;
