Expand buyers list with additional cities and plans
Added new buyers with various plans across multiple cities.

--- a/index.html
+++ b/index.html
@@ -1834,12 +1834,118 @@ async function submitLeadAndChat() {
 
 
     const buyers = [
-    { city: "Bangalore", plan: "Elite Stealth" },
-    { city: "San Francisco", plan: "Pro Monthly" },
-    { city: "Hyderabad", plan: "Elite Stealth" },
-    { city: "London", plan: "Quarterly Pass" },
-    { city: "New Delhi", plan: "Elite Stealth" },
-    { city: "Austin", plan: "Pro Monthly" }
+  { city: "Bangalore", plan: "Elite Stealth" },
+  { city: "Mumbai", plan: "Pro Monthly" },
+  { city: "Hyderabad", plan: "Elite Stealth Yearly" },
+  { city: "Chennai", plan: "Elite Stealth" },
+  { city: "New Delhi", plan: "Pro Monthly" },
+  { city: "Pune", plan: "Elite Stealth Yearly" },
+  { city: "Ahmedabad", plan: "Elite Stealth" },
+  { city: "Kolkata", plan: "Pro Monthly" },
+  { city: "Noida", plan: "Elite Stealth Yearly" },
+  { city: "Gurugram", plan: "Elite Stealth" },
+
+  { city: "Faridabad", plan: "Pro Monthly" },
+  { city: "Ghaziabad", plan: "Elite Stealth Yearly" },
+  { city: "Greater Noida", plan: "Elite Stealth" },
+  { city: "Indore", plan: "Pro Monthly" },
+  { city: "Bhopal", plan: "Elite Stealth Yearly" },
+  { city: "Jaipur", plan: "Elite Stealth" },
+  { city: "Udaipur", plan: "Pro Monthly" },
+  { city: "Jodhpur", plan: "Elite Stealth Yearly" },
+  { city: "Kota", plan: "Elite Stealth" },
+  { city: "Ajmer", plan: "Pro Monthly" },
+
+  { city: "Surat", plan: "Elite Stealth Yearly" },
+  { city: "Vadodara", plan: "Elite Stealth" },
+  { city: "Rajkot", plan: "Pro Monthly" },
+  { city: "Bhavnagar", plan: "Elite Stealth Yearly" },
+  { city: "Jamnagar", plan: "Elite Stealth" },
+  { city: "Gandhinagar", plan: "Pro Monthly" },
+  { city: "Gandhidham", plan: "Elite Stealth Yearly" },
+  { city: "Mehsana", plan: "Elite Stealth" },
+  { city: "Anand", plan: "Pro Monthly" },
+  { city: "Nadiad", plan: "Elite Stealth Yearly" },
+
+  { city: "Vapi", plan: "Elite Stealth" },
+  { city: "Navsari", plan: "Pro Monthly" },
+  { city: "Bharuch", plan: "Elite Stealth Yearly" },
+  { city: "Ankleshwar", plan: "Elite Stealth" },
+  { city: "Morbi", plan: "Pro Monthly" },
+  { city: "Wankaner", plan: "Elite Stealth Yearly" },
+  { city: "Palanpur", plan: "Elite Stealth" },
+  { city: "Patan", plan: "Pro Monthly" },
+  { city: "Deesa", plan: "Elite Stealth Yearly" },
+  { city: "Himmatnagar", plan: "Elite Stealth" },
+
+  { city: "Amreli", plan: "Pro Monthly" },
+  { city: "Junagadh", plan: "Elite Stealth Yearly" },
+  { city: "Porbandar", plan: "Elite Stealth" },
+  { city: "Dwarka", plan: "Pro Monthly" },
+  { city: "Veraval", plan: "Elite Stealth Yearly" },
+  { city: "Godhra", plan: "Elite Stealth" },
+  { city: "Dahod", plan: "Pro Monthly" },
+  { city: "Modasa", plan: "Elite Stealth Yearly" },
+  { city: "Kalol", plan: "Elite Stealth" },
+  { city: "Sanand", plan: "Pro Monthly" },
+
+  { city: "Nagpur", plan: "Elite Stealth Yearly" },
+  { city: "Nashik", plan: "Elite Stealth" },
+  { city: "Aurangabad", plan: "Pro Monthly" },
+  { city: "Kolhapur", plan: "Elite Stealth Yearly" },
+  { city: "Sangli", plan: "Elite Stealth" },
+  { city: "Satara", plan: "Pro Monthly" },
+  { city: "Solapur", plan: "Elite Stealth Yearly" },
+  { city: "Latur", plan: "Elite Stealth" },
+  { city: "Nanded", plan: "Pro Monthly" },
+  { city: "Jalgaon", plan: "Elite Stealth Yearly" },
+
+  { city: "Amravati", plan: "Elite Stealth" },
+  { city: "Akola", plan: "Pro Monthly" },
+  { city: "Chandrapur", plan: "Elite Stealth Yearly" },
+  { city: "Wardha", plan: "Elite Stealth" },
+  { city: "Yavatmal", plan: "Pro Monthly" },
+
+  { city: "Coimbatore", plan: "Elite Stealth Yearly" },
+  { city: "Madurai", plan: "Elite Stealth" },
+  { city: "Tiruchirappalli", plan: "Pro Monthly" },
+  { city: "Salem", plan: "Elite Stealth Yearly" },
+  { city: "Erode", plan: "Elite Stealth" },
+  { city: "Tiruppur", plan: "Pro Monthly" },
+  { city: "Vellore", plan: "Elite Stealth Yearly" },
+  { city: "Hosur", plan: "Elite Stealth" },
+  { city: "Thanjavur", plan: "Pro Monthly" },
+  { city: "Kumbakonam", plan: "Elite Stealth Yearly" },
+
+  { city: "Kochi", plan: "Elite Stealth" },
+  { city: "Thiruvananthapuram", plan: "Pro Monthly" },
+  { city: "Kozhikode", plan: "Elite Stealth Yearly" },
+  { city: "Thrissur", plan: "Elite Stealth" },
+  { city: "Kollam", plan: "Pro Monthly" },
+
+  { city: "Vijayawada", plan: "Elite Stealth Yearly" },
+  { city: "Guntur", plan: "Elite Stealth" },
+  { city: "Nellore", plan: "Pro Monthly" },
+  { city: "Tirupati", plan: "Elite Stealth Yearly" },
+  { city: "Kurnool", plan: "Elite Stealth" },
+  { city: "Visakhapatnam", plan: "Pro Monthly" },
+  { city: "Vizianagaram", plan: "Elite Stealth Yearly" },
+  { city: "Srikakulam", plan: "Elite Stealth" },
+  { city: "Rajahmundry", plan: "Pro Monthly" },
+  { city: "Eluru", plan: "Elite Stealth Yearly" },
+
+  { city: "Bhubaneswar", plan: "Elite Stealth" },
+  { city: "Cuttack", plan: "Pro Monthly" },
+  { city: "Rourkela", plan: "Elite Stealth Yearly" },
+  { city: "Sambalpur", plan: "Elite Stealth" },
+
+  { city: "Ranchi", plan: "Pro Monthly" },
+  { city: "Jamshedpur", plan: "Elite Stealth Yearly" },
+  { city: "Dhanbad", plan: "Elite Stealth" },
+  { city: "Bokaro", plan: "Pro Monthly" },
+
+  { city: "Patna", plan: "Elite Stealth Yearly" },
+  { city: "Gaya", plan: "Elite Stealth" }
 ];
 
 function showPurchaseToast() {
