--- a/index.html
+++ b/index.html
@@ -1512,18 +1512,28 @@
         return `${currencySymbol}${finalVal}`;
     }
 
-    function setCycle(c){
-        currentCycle=c;
-        const btnM=document.getElementById('btnMonthly'); const btnA=document.getElementById('btnAnnual');
-        if(c==='monthly'){
-            btnM.className="px-6 py-2 rounded text-xs font-bold bg-white text-black transition"; 
-            btnA.className="px-6 py-2 rounded text-xs font-bold text-slate-500 hover:text-white transition";
-        } else {
-            btnA.className="px-6 py-2 rounded text-xs font-bold bg-white text-black transition"; 
-            btnM.className="px-6 py-2 rounded text-xs font-bold text-slate-500 hover:text-white transition";
-        }
-        updatePricingUI();
+function setCycle(cycle) {
+    currentCycle = cycle;
+    const btnM = document.getElementById('cycleMonthly');
+    const btnY = document.getElementById('cycleYearly');
+
+    if (cycle === 'monthly') {
+        // Monthly active styles
+        btnM.classList.add('bg-white', 'text-black');
+        btnM.classList.remove('text-slate-400');
+        // Yearly inactive styles
+        btnY.classList.remove('bg-white', 'text-black');
+        btnY.classList.add('text-slate-400');
+    } else {
+        // Yearly active styles
+        btnY.classList.add('bg-white', 'text-black');
+        btnY.classList.remove('text-slate-400');
+        // Monthly inactive styles
+        btnM.classList.remove('bg-white', 'text-black');
+        btnM.classList.add('text-slate-400');
     }
+    updatePricingUI();
+}
 
     function updatePricingUI() {
         if (!PRICING_CONFIG) return;
